--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ appdirs==1.4.4
 certifi==2020.11.8
 distlib==0.3.1
 filelock==3.0.12
+gunicorn==20.0.4
 joblib==0.17.0
 numpy==1.19.3
 pipenv==2020.11.15
